# f1tenth_autonomous_control

./: README.md
Real Car Models and Training/End To End/Lane Following/: config.py  converter.py  model.py  test_file.py
Real Car Models and Training/End To End/Lane Following  Probabilistic/: config.py  model.py
Real Car Models and Training/End To End/Speed Controller/: config.py  dataset.py  train.py
Real Car Models and Training/End To End/Speed Controller Probabilisitc/: config.py  model.py  train.py
Real Car Models and Training/Semantic Segmentation/: augmentations.py  augmented_dataset.py  bayesian_model.py  config.py  converter.py  dataset.py  generate_augmentation_file_set.py  loss.py  test_augmentations.py  tester.py  tester_new_input.py  trainer.py  training_utils.py
Real Car Models and Training/Seperate Vision and State/Lane Following/: config.py  converter.py  model.py  train.py
Real Car Models and Training/Seperate Vision and State/Lane State Detection/: config.py  converter.py  dataset.py  loss.py  train.py
Real Car Models and Training/Seperate Vision and State/Speed/: config.py  converter.py  dataset.py  train.py
Real Car Models and Training/Seperate Vision and State/Turning Direction Detection/: config.py  converter.py  (+4 more)
car/: CMakeLists.txt  package.xml  setup.py
car/config/: end_to_end_lane_follow_settings.yaml  manual_lane_follow_settings.yaml  overtaking_settings.yaml  semantic_segmentation_settings.yaml  simple_lane_follow_settings.yaml
car/include/car/: semantic_segmentation.h
car/include/manual_lane_follow/: lane_detector.h  lanes_to_steering.h  not_working_lanes_to_steering.h  steeringAngleFromPhoto.h
car/launch/: camera.launch  end_to_end_lane_follow.launch  manual_lane_follow.launch  object_detection.launch  on_start.launch  overtaking.launch  semantic_segmentation.launch  simple_lane_follow.launch
car/models/end_to_end_lane_follow/: laneFollowerNetwork.pt
car/models/overtaking/: converted_jit_model.pt  laneFollowerNetwork.pt  speedNetwork.pt
car/scripts/car/object_detection/: backup.py  constants.py  object_detection.py  pose_model.py  utils.py  yolo_model.py
car/scripts/car/semantic_segmentation/: model.py  semantic_segmentation.py
car/src/car_tracker (WORK IN PROGRESS)/: car_tracker.cpp
car/src/end_to_end_lane_follow/: end_to_end_lane_follow.cpp
car/src/manual_lane_follow/: manual_lane_follow.cpp
car/src/overtaking/: overtaking.cpp
car/src/semantic_segmentation/: semantic_segmentation.cpp
car/src/simple_lane_follow/: backup  simple_lane_follow.cpp
(+4 files in other folders)
